# sct_gazebo

./: CMakeLists.txt  package.xml  sct_drive_controller_plugins.xml  sct_robot_hw_sim_plugin.xml
config/: DiffDriveController.cfg  control.yaml  example.rviz  scout_hw_sim.yaml  sct_robot_hw_sim.yaml
include/sct_gazebo/: imu_sim.h  odometry.h  sct_chassis_sim.h  sct_drive_controller.h  sct_odom_sim.h  sct_robot_hw_sim.h  speed_limiter.h
launch/: control_test.launch  empty_world.launch  load_state_publisher.launch  load_world.launch  multi_robot_empty_word.launch  multi_robot_task_word.launch  robot_empty_world.launch  robot_test_world.launch
src/: imu_sim.cpp  odometry.cpp  sct_chassis_sim.cpp  sct_drive_controller.cpp  sct_odom_sim.cpp  sct_robot_hw_sim.cpp  speed_limiter.cpp
worlds/: multi_copter.sdf  simple_task.world  siple_world.world  task.world  task_myx.world  test_world.world
