<?xml version="1.0"?>
<package format="2">
    <name>sct_gazebo</name>
    <version>0.0.0</version>
    <description>The sct_gazebo package</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <!-- Example:  -->
    <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
    <maintainer email="myx@todo.todo">myx</maintainer>


    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>BSD</license>


    <!-- buildtool_depend: dependencies of the build process -->
    <buildtool_depend>catkin</buildtool_depend>
    <!-- depend: build, export, and execution dependency -->
    <depend>roscpp</depend>
    <depend>roslint</depend>
    <depend>sct_common</depend>
    <depend>nav_msgs</depend>

    <depend>gazebo</depend>
    <depend>gazebo_ros</depend>
    <depend>gazebo_ros_control</depend>

    <exec_depend>sct_description</exec_depend>
    <exec_depend>roboticsgroup_upatras_gazebo_plugins</exec_depend>

    <export>
        <gazebo_ros_control plugin="${prefix}/sct_robot_hw_sim_plugin.xml"/>
        <gazebo_ros gazebo_model_path="${prefix}/.."/>
    </export>
</package>
